fixed text clipping, left-aligned some text, linked phone number

--- a/css/main2.css
+++ b/css/main2.css
@@ -396,7 +396,6 @@ img.client {
     position: relative;
     max-width: 45%;
     padding-right: 10px;
-    padding-left: 10px;
     vertical-align: top;
 }
 .rightSide {
@@ -404,7 +403,6 @@ img.client {
     display: inline-block;
     position: relative;
     max-width: 45%;
-    padding-left: 10px;
     padding-right: 10px;
     vertical-align: bottom;
 }
@@ -503,8 +501,8 @@ iframe.player {
     }
 
     .section {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
     .half-gallon {
